--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --gridGradient: transparent 65%, oklch(30% 0.1 290) 75%, oklch(65% 0.2 15) 80%, oklch(30% 0.1 290) 85%, transparent 95%;
 }
 
 body {
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
-  background: #150220;
+  font-size: clamp(1rem, 2vw, 2rem);
+  background:
+    radial-gradient(oklch(66% 0.25 15 / 50%) 0%, transparent 75%),
+    linear-gradient(oklch(25% 0.085 295) 40%, oklch(15% 0.065 295) 70%);
+  perspective: 600px;
+  overflow: hidden;
 }
 
-div {
-  font-family: "Noto Sans TC";
-  font-size: 5rem;
-  letter-spacing: 5px;
-  color: #1f0e28;
-  border: 3px solid rgba(22, 182, 212, 0.3);
-  padding: 20px;
-  position: relative;
-  width: 500px;
-  height: 150px;
-  cursor: pointer;
-  animation: blink 8s infinite;
-}
-
-span {
+.grid {
+  width: 200vw;
+  height: 300vh;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 10%;
+  bottom: -120vh;
+  background:
+    linear-gradient(var(--gridGradient)),
+    linear-gradient(90deg, var(--gridGradient));
+  background-size: 1em 1em;
+  transform: rotateX(-90deg);
+  mask-image: linear-gradient(black, transparent 80%);
 }
-  
 
-@keyframes blink {
-  0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92% {
-    color: #1f0e28;
-    text-shadow: none;
-    box-shadow: none;
-    border: 3px solid rgba(22, 182, 212, 0.3);
-  }
-  
-  18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 100% {
-    border: 3px solid rgba(22, 182, 212, 1);
-    color: #ffc2fd;
-  text-shadow: 0 0 10px #f205ae,
-               0 0 20px #f205ae,
-               0 0 40px #f205ae,
-               0 0 80px #f205ae,
-               0 0 160px #f205ae,
-               0 0 320px #f205ae,
-               0 0 640px #f205ae;
-  box-shadow: inset 0 0 10px rgba(113,213,255, 0.5),
-              inset 0 0 20px rgba(113,213,255, 0.5),
-              0 0 10px rgba(113,213,255, 0.3),
-              0 0 20px rgba(113,213,255, 0.3),
-              0 0 40px rgba(113,213,255, 0.3),
-              0 0 80px rgba(113,213,255, 0.3),
-              0 0 160px rgba(113,213,255, 0.3),
-              0 0 320px rgba(113,213,255, 0.3)
+.lines {
+  position: fixed;
+  width: 100vw;
+  height: 3em;
+  background: linear-gradient(oklch(75% 0.13 230 / 0.2) 20%, oklch(80% 0.135 200) 40%, oklch(70% 0.1 200) 60%, oklch(75% 0.13 230 / 0.2) 80%);
+  background-size: 1px 0.5em;
+  box-shadow: 0 0 2em oklch(90% 0.15 195 / 0.33);
+  transform: translateY(-50%);
+  left: 0;
 }
-  }
+
+h1 {
+  position: relative;
+  font-family: "Righteous", sans-serif;
+  font-size: 9em;
+  margin: 0;
+  transform: skew(-15deg);
+  letter-spacing: 0.075em;
+}
+h1 span:first-child {
+  display: block;
+  text-shadow: 0 0 0.1em oklch(92% 0.1 197.5), 0 0 5em oklch(95% 0.02 90);
+  -webkit-text-stroke: 0.06em oklch(20% 0.1 295 / 0.75);
+}
+h1 span:last-child {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-image: linear-gradient(
+    oklch(45% 0.225 285) 20%,
+    oklch(85% 0.135 197.5) 35%,
+    oklch(95% 0.02 90) 50%,
+    oklch(25% 0.1 295) 50%,
+    oklch(55% 0.22 357) 60%,
+    oklch(65% 0.2 15) 75%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h2 {
+  margin-top: -0.8em;
+  color: oklch(95% 0.02 90);
+  font-family: "Mr Dafoe";
+  font-size: 5em;
+  text-shadow: 0 0 0.05em oklch(98% 0 0), 0 0 0.2em oklch(65% 0.265 351), 0 0 0.3em oklch(60% 0.25 345);
+  transform: rotate(-7deg);
 }
