--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap");
 
 :root {
-  --gridGradient: transparent 65%, oklch(30% 0.1 290) 75%, oklch(65% 0.2 15) 80%, oklch(30% 0.1 290) 85%, transparent 95%;
+  --gridGradient: transparent 65%, oklch(30% 0.1 290) 75%, oklch(65% 0.2 15) 80%,
+    oklch(30% 0.1 290) 85%, transparent 95%;
 }
 
 body {
   font-size: clamp(1rem, 2vw, 2rem);
-  background:
-    radial-gradient(oklch(66% 0.25 15 / 50%) 0%, transparent 75%),
+  background: radial-gradient(oklch(66% 0.25 15 / 50%) 0%, transparent 75%),
     linear-gradient(oklch(25% 0.085 295) 40%, oklch(15% 0.065 295) 70%);
   perspective: 600px;
   overflow: hidden;
@@ -19,8 +19,7 @@ body {
   height: 300vh;
   position: absolute;
   bottom: -120vh;
-  background:
-    linear-gradient(var(--gridGradient)),
+  background: linear-gradient(var(--gridGradient)),
     linear-gradient(90deg, var(--gridGradient));
   background-size: 1em 1em;
   transform: rotateX(-90deg);
@@ -31,7 +30,12 @@ body {
   position: fixed;
   width: 100vw;
   height: 3em;
-  background: linear-gradient(oklch(75% 0.13 230 / 0.2) 20%, oklch(80% 0.135 200) 40%, oklch(70% 0.1 200) 60%, oklch(75% 0.13 230 / 0.2) 80%);
+  background: linear-gradient(
+    oklch(75% 0.13 230 / 0.2) 20%,
+    oklch(80% 0.135 200) 40%,
+    oklch(70% 0.1 200) 60%,
+    oklch(75% 0.13 230 / 0.2) 80%
+  );
   background-size: 1px 0.5em;
   box-shadow: 0 0 2em oklch(90% 0.15 195 / 0.33);
   transform: translateY(-50%);
@@ -72,6 +76,7 @@ h2 {
   color: oklch(95% 0.02 90);
   font-family: "Mr Dafoe";
   font-size: 5em;
-  text-shadow: 0 0 0.05em oklch(98% 0 0), 0 0 0.2em oklch(65% 0.265 351), 0 0 0.3em oklch(60% 0.25 345);
+  text-shadow: 0 0 0.05em oklch(98% 0 0), 0 0 0.2em oklch(65% 0.265 351),
+    0 0 0.3em oklch(60% 0.25 345);
   transform: rotate(-7deg);
 }
